tambah token jwt untuk api
